--- a/child_pages/cc-elections/Candidates/kott.html
+++ b/child_pages/cc-elections/Candidates/kott.html
@@ -167,20 +167,20 @@
     <h4 class="quick-sum">Rating Explanation</h4>
     <h6 class="page-title">Richard Kott</h6>
     <p>
-      Initial transparency/accessibility view: <em>Developing (trending upward)</em>. Kott has a substantive, unedited platform video outlining priorities 
-      and a campaign Facebook page (listed below). At this stage, we have not yet logged a dedicated campaign website, long-form 
-      interviews, or a truly public facing campaign event. What that means is that there was an event with Taylor and two other candidates that was 
-      technically a fundraiser, which limits voters and the press from hearing campaign messaging without directly supporting it. It also raises the question 
-      of whether these 3 candidates are campaigning together without publicly saying so. This also presents the challenge citizen journalists who cover elections 
-      face during the throws of campaign season: even if there was a possibility of hanging around the fundraiser for interview opportunities before or after the 
-      event, it was one of at least 3 events that evening... so, I chose to go where I believed I would have a better chance of getting substantive info, and I would 
-      guess I made the right choice.
+      Kott has moved from “developing transparency/accessibility” into the gray zone of accessibility and transparency. On one hand, he attended the InformTheVoteNJ meet-n-greet alongside many 
+      other candidates—a clear 
+      positive, since it gave voters and the press a real opportunity to interact directly. He has also committed to attending the upcoming Candidate Forum at the Millville Public Library, 
+      where the format ensures candidates’ answers to issue-based questions will be publicly recorded. That is a distinction from other recent forums in the area where no recording was allowed, 
+      meaning Kott will, by all accounts, have participated in a truly accessible candidate forum. Prior to that he released a campaign video himself, made some statements on his facebook campaign
+      page, and hosted a fundraiser.
       <br><br>
-      What would move this rating up: a central campaign site with organized agenda/issue pages; coordinated communication with the press; long-form 
-      interviews (radio/podcast/video); a truly public and advertised campaign event; and timely replies to voter/media inquiries. As those pieces appear, 
-      we’ll update the rating to reflect real-world 
-      accessibility for voters. The main benefit for voters with this candidate and many others is to engage in the action plans that describe how his 
-      campaign ideas will actually materialize if they get elected.      
+      On the other hand, his campaign still lacks a fully comprehensive central website with organized agenda/issue pages. Without the efforts of InformTheVoteNJ to organize and host public events, 
+      voters would be left with limited structured opportunities to hear directly from him. This illustrates a larger reality: the transparency ratings here are not 100% objective—but they do 
+      track how campaigns actually unfold in the real world.
+      <br><br>
+      For Kott and others, the open question remains the same one that’s been posed to candidates since 2023, where I asked at Bridgeton High School for that year's candidate's forum, something to the 
+      effect of: If elected, how will you ensure that future campaign seasons are structured in a way 
+      that makes transparency and accessibility a given—so voters can easily see which candidates are truly open, responsive, and accountable?  
       <br><br>
       Click the red x at the top of this box and then scroll down for more in-depth information and sources.
     </p>
@@ -255,7 +255,7 @@
   <br><br>
 
   <div class="gauge-box">
-    <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Developing (trending upward)</h4>
+    <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average, Perhaps?</h4>
     <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link">
       <button class="candidate-ext-site">Transparency Standards Explained</button>
     </a>
