--- a/child_pages/cc-elections/Candidates/kears.html
+++ b/child_pages/cc-elections/Candidates/kears.html
@@ -180,21 +180,20 @@
               <h6 class="page-title">Patricia Clark-Kears</h6>
               <p>          
 
-                Patricia Clark-Kears was one of the first candidates this cycle to respond directly, providing a detailed platform that outlined her 
-                background, experience, and proposals on Millville’s key issues. She also participated in a full-length radio interview and committed to an 
-                additional in-depth podcast discussion closer to the election. That willingness to engage upfront stands out in a local political culture 
-                where too many candidates remain vague or unavailable.
+                Patricia Clark-Kears was one of the first Millville candidates this cycle to engage directly, submitting a comprehensive written platform and sitting for a full-length radio 
+                interview. She also committed to a follow-up long-form podcast closer to Election Day. That early willingness to be clear and accessible stood out in a field where many 
+                candidates hesitated.
                 <br>
                 <br>
-                Originally, I rated her at the very top tier of transparency because of how quickly and clearly she cooperated compared to the status quo. 
-                But as the campaign has moved forward, I’ve noticed there have not yet been public campaign events announced or consistent social media 
-                activity beyond what we already covered together. In the interest of being transparent about my own ratings, I think it’s more accurate 
-                at this stage to place her in the “above average, trending toward top-tier” category.
+                Since then, she has maintained a presence with social media updates and attended the recent InformTheVoteNJ meet n greet—positive steps that show she is making herself available 
+                to voters. She cannot attend the upcoming candidate forum, and that’s understandable given the short notice of its scheduling. But it does highlight a broader reality: even 
+                strong candidates can struggle to consistently hit the “true top-tier” mark for transparency when our local political infrastructure lacks predictable, well-established forums 
+                and expectations.
                 <br>
                 <br>
-                That rating still reflects meaningful openness—she’s provided more to voters than many of her peers—but it also leaves room for growth as the 
-                campaign season unfolds. Continued visibility through events, regular updates, and follow-through on her commitment to future long-form 
-                interviews could easily solidify a top-tier rating.
+                For now, I place her in the “Above Average, trending toward Top-Tier” category. She has already provided more substance and accessibility than many of her peers. If she continues to 
+                follow through on her promised second interview, keeps up regular public visibility, and leans into voter-facing events where possible, it would help raise the status quo regarding 
+                election seasons.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
