--- a/child_pages/cc-elections/Candidates/broomhall.html
+++ b/child_pages/cc-elections/Candidates/broomhall.html
@@ -142,9 +142,17 @@
               <h6 class="page-title">Victoria Broomhall</h6>
               <p>          
 
-                As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
-                is appropriate, basic google searches, and public comments at appropriate governmental meetings. In other words, a lack of information on this site should not be 
-                perceived as a lack of effort on our part, we simply haven't received anything yet.
+                As of 10/13/2025, Candidate Broomhall has provided little in the way of public-facing campaign information. As with other candidates, InformTheVoteNJ has made outreach through the 
+                clerk’s office, online searches, and direct communication, but a clear platform or dedicated campaign material has not been made available.
+                <br>
+                <br>
+                Broomhall did participate in the recent 4 Seasons candidate forum, though we cannot report on much at the request of the host. Unlike several of her peers, she did attend 
+                InformTheVoteNJ’s recent meet n greet and is a tentative “maybe” for the upcoming candidate forum at the Millville Public Library, which will be recorded.
+                <br>
+                <br>
+                It’s also worth noting that she was recently involved in some election-season turmoil, where she expressed that part of her low public presence stemmed from concerns about 
+                bullying and cyber-bullying. While those concerns are real and understandable, the effect is that voters still lack the ability to clearly see her positions and agenda. Until more 
+                accessible, shareable campaign material is provided, her visibility and transparency remain limited, leaving much of the electorate in the dark about where she stands.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -161,6 +169,18 @@
               <h6 class="page-title">Victoria Broomhall</h6>
               <p>          
 
+                Candidate Broomhall is currently rated below average (trending upwards) in transparency and accessibility. While she has taken a few meaningful steps forward—such as attending 
+                InformTheVoteNJ’s meet n greet and leaving the door open to join the upcoming public forum at the library—her overall campaign presence remains limited.
+                <br>
+                <br>
+                Broomhall has expressed concerns about bullying and cyber-bullying, and those concerns are valid. At the same time, voters cannot be left without accessible, verifiable information. 
+                Multiple opportunities have been available for her to provide a platform, long-form interview, or other public-facing material, and those opportunities have not yet been taken.
+                <br>
+                <br>
+                For now, her engagement places her above candidates who have avoided all public interaction, but without a more consistent and transparent presence, voters are still left without 
+                the clarity needed to fully evaluate her candidacy.
+                <br>
+                <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
               </p>
@@ -273,21 +293,21 @@
 
             <h4 class="sub-heading">Agenda</h4>
             <div class="experience can-sec">
-                As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
+                As of 10/13/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
                 is appropriate, basic google searches, and public comments at appropriate governmental meetings. In other words, a lack of information on this site should not be 
                 perceived as a lack of effort on our part, we simply haven't received anything yet.
             </div>
             
             <h4 class="sub-heading">Background and Campaign Message</h4>
             <div class="experience can-sec">
-                As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
+                As of 10/13/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
                 is appropriate, basic google searches, and public comments at appropriate governmental meetings. In other words, a lack of information on this site should not be 
                 perceived as a lack of effort on our part, we simply haven't received anything yet.
             </div>
 
             <h4 class="sub-heading">Experience</h4>
                 <div class="experience can-sec">
-                     As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
+                     As of 10/13/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
                 is appropriate, basic google searches, and public comments at appropriate governmental meetings. In other words, a lack of information on this site should not be 
                 perceived as a lack of effort on our part, we simply haven't received anything yet.
                 </div>
