--- a/child_pages/cc-elections/Candidates/delvicario.html
+++ b/child_pages/cc-elections/Candidates/delvicario.html
@@ -142,9 +142,17 @@
               <h6 class="page-title">Carmine Delvicario</h6>
               <p>          
 
-                As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
-                is appropriate, basic google searches, and public comments at appropriate governmental meetings. In other words, a lack of information on this site should not be 
-                perceived as a lack of effort on our part, we simply haven't received anything yet.
+                We still don’t have any public-facing campaign information from this candidate. As a reminder, InformTheVoteNJ reaches out through the appropriate clerk’s office, basic online 
+                searches, and direct public comments at governmental meetings. A lack of information here should not be interpreted as a lack of effort on our part.
+                <br>
+                <br>
+                This candidate did participate in the recent 4 Seasons candidate forum and offered some substantive remarks. However, at the request of 4 Seasons, we are not permitted to report or 
+                publish details from that event.
+                <br>
+                <br>
+                It is also worth noting that, despite being personally made aware of InformTheVoteNJ’s meet n greet event and receiving a business card directly, this candidate did not attend and 
+                has not followed up. To our knowledge, they also do not plan to participate in the upcoming public forum at the Millville Public Library. Until we receive a platform, website, 
+                interview, or other public campaign materials that can be shared openly, we remain without accessible information to present to voters.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -273,21 +281,21 @@
 
             <h4 class="sub-heading">Agenda</h4>
             <div class="experience can-sec">
-                As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
+                As of 10/13/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
                 is appropriate, basic google searches, and public comments at appropriate governmental meetings. In other words, a lack of information on this site should not be 
                 perceived as a lack of effort on our part, we simply haven't received anything yet.
             </div>
             
             <h4 class="sub-heading">Background and Campaign Message</h4>
             <div class="experience can-sec">
-                As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
+                As of 10/13/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
                 is appropriate, basic google searches, and public comments at appropriate governmental meetings. In other words, a lack of information on this site should not be 
                 perceived as a lack of effort on our part, we simply haven't received anything yet.
             </div>
 
             <h4 class="sub-heading">Experience</h4>
                 <div class="experience can-sec">
-                     As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
+                     As of 10/13/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
                 is appropriate, basic google searches, and public comments at appropriate governmental meetings. In other words, a lack of information on this site should not be 
                 perceived as a lack of effort on our part, we simply haven't received anything yet.
                 </div>
