sooy quick sum button abandoned

--- a/child_pages/cc-elections/Candidates/sooy.html
+++ b/child_pages/cc-elections/Candidates/sooy.html
@@ -271,7 +271,29 @@
                     
                 </div>
 
-                <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
+                <!-- <button id="quick-summary-reopen" class="quick-sum">quick summary</button> -->
+                <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                Joe Sooy is seeking re-election to the Millville City Commission. A lifelong Millville resident, Sooy blends
+            hands-on operational experience (U.S. Air Force communications tech; Wheaton Glass CNC/NC maintenance) with a
+            mathematics degree and senior leadership roles in New Jersey corrections and public-sector unions. He frames his
+            candidacy around continuity: finishing large, in-motion projects and protecting one-time revenues from being
+            spent on short bursts that don’t compound for taxpayers.
+            <br><br>
+            His 2025 focus areas: (1) lock in the Community Realty Partners (CRP) land sale at Hurley Industrial Park (~$10M)
+            and reinvest proceeds into infrastructure; (2) keep economic development moving (La Vonia meat-cutting/packing
+            facility, Buckshutem Rd warehousing) to grow ratables; (3) operational discipline—use UEZ tools smartly, pave
+            Columbia Ave, expand façade grants; (4) implement recently passed retail-cannabis licensing (3 shops) as a revenue
+            stream for safe streets and roads; (5) sustain master-plan modernization and avoid policy reversals that stall
+            momentum.
+            <br><br>
+            On homelessness and public safety, he argues local ordinances are undermined by state-level bail reform and
+            enforcement limits; he favors accountability for repeat offenders and wants state leaders pressed on practical
+            fixes. He’s skeptical that county/state initiatives like the “Middle Mile” broadband ring would benefit Millville
+            residents relative to cost, preferring targeted, city-level investments with clear ROI.
+            </details>
 
                 <div class="election-date">
                     <p>This election is on November 4th, 2025</p>
