--- a/child_pages/cc-elections/Candidates/sheppard.html
+++ b/child_pages/cc-elections/Candidates/sheppard.html
@@ -247,7 +247,24 @@
                  
              </div>
 
-             <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
+             <!-- <button id="quick-summary-reopen" class="quick-sum">quick summary</button> -->
+
+              <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                We still don’t have any public-facing campaign information from this candidate. As a reminder, InformTheVoteNJ reaches out through the appropriate clerk’s office, basic online 
+                searches, and direct public comments at governmental meetings. A lack of information here should not be interpreted as a lack of effort on our part.
+                <br>
+                <br>
+                This candidate did participate in the recent 4 Seasons candidate forum and offered some substantive remarks. However, at the request of 4 Seasons, we are not permitted to report or 
+                publish details from that event.
+                <br>
+                <br>
+                It is also worth noting that, despite being personally made aware of InformTheVoteNJ’s meet n greet event and receiving a business card directly, this candidate did not attend and 
+                has not followed up. To our knowledge, they also do not plan to participate in the upcoming public forum at the Millville Public Library. Until we receive a platform, website, 
+                interview, or other public campaign materials that can be shared openly, we remain without accessible information to present to voters.
+            </details>
 
              <div class="election-date">
                  <p>This election is on November 4th, 2025</p>
