--- a/child_pages/cc-elections/Candidates/summers.html
+++ b/child_pages/cc-elections/Candidates/summers.html
@@ -562,16 +562,19 @@
             <summary style="color: blue;">
                 <strong>Explanation</strong>
             </summary>
-                David Summers is a first-time candidate who has shown early signs of accessibility and openness. His initial interviews with InformTheVoteNJ were brief but cordial, giving voters 
-                a basic sense of his background and priorities. He has since continued co-hosting a weekly call-in radio show with Robert McQuade, where residents can ask questions live — a 
-                positive signal of ongoing engagement. 
-                <br><br> 
-                While his campaign messaging is still developing, Summers has proactively invited InformTheVoteNJ to do a walkthrough of his day 
-                job to discuss his work and expand on his platform in greater depth. This willingness to open up his workplace and provide more context about his skills and approach suggests a 
-                trajectory toward stronger transparency. 
-                <br><br> 
-                Given these factors, Summers currently holds an <strong>“Average (Trending Upwards)”</strong> transparency rating. To raise that rating further, he would benefit from 
-                consolidating his positions into a detailed, public-facing platform and participating in longer-form interviews that explore his agenda beyond surface-level issues. 
+                David Summers is a first-time candidate who has shown consistent signs of accessibility and openness. His initial interviews with InformTheVoteNJ were brief but cordial, giving 
+                voters a basic sense of his background and priorities. He has since continued co-hosting a weekly call-in radio show with Robert McQuade, where residents can ask questions live — 
+                a clear signal of ongoing engagement.
+                <br><br>
+                Summers has also taken further steps this fall. He attended the recent InformTheVoteNJ meet-n-greet, is scheduled for a full radio interview on 10/14, and has committed to attending 
+                the Candidate Forum at the Millville Public Library this Saturday. In addition, he proactively invited InformTheVoteNJ to do a walkthrough of his day job to expand on his platform, 
+                showing a willingness to open up his workplace and provide more context about his skills and approach.
+                <br><br>
+                If all of those commitments continue alongside his weekly radio presence, it would be difficult to argue that Summers isn’t doing everything reasonably possible to be transparent 
+                and accessible. At that point, any remaining perceived deficiencies would be less about his own choices and more reflective of the broader city and county election norms that limit 
+                voter access to information.
+                <br><br>
+                Given these factors, Summers currently holds an <strong>“Above Average (Poised for Top-Tier)”</strong> transparency rating. 
         </details>
 
     </div> 
