branin and taylor updates

--- a/child_pages/cc-elections/Candidates/branin.html
+++ b/child_pages/cc-elections/Candidates/branin.html
@@ -164,18 +164,20 @@
     <h4 class="quick-sum">Rating Explanation</h4>
     <h6 class="page-title">Newell Branin</h6>
     <p>
-      Initial transparency/accessibility view: <em>Developing (early-stage)</em>. As of now, Branin has a campaign Facebook page and one campaign-related 
-      statement (see below). We have not yet logged a dedicated campaign website, long-form interviews, or a truly public facing campaign event. What that means is that there was an event with 
-      Branin and two other candidates that was 
-      technically a fundraiser, which limits voters and the press from hearing campaign messaging without directly supporting it. It also raises the question 
-      of whether these 3 candidates are campaigning together without publicly saying so. This also presents the challenge citizen journalists who cover elections 
-      face during the throws of campaign season: even if there was a possibility of hanging around the fundraiser for interview opportunities before or after the 
-      event, it was one of at least 3 events that evening... so, I chose to go where I believed I would have a better chance of getting substantive info, and I would 
-      guess I made the right choice.
+      Branin began the campaign with a Facebook page and one campaign-related statement, but without a central campaign site, issue sections, or long-form interviews. Early appearances included a 
+      fundraiser-type event shared with two other candidates, which by nature limited broader voter access and raised questions about whether the three were quietly running as a slate. He also 
+      attended the 4 Seasons candidate forum, which unfortunately did not allow filming.
       <br><br>
-      What would move this up: a central campaign site with organized agenda/issue sections; a truly public event listing; long-form interviews; 
-      and prompt replies to voter/media inquiries. As these materials appear, we’ll update the rating 
-      to reflect real-world accessibility.
+      Since then, Branin has shown a modest step forward by attending the recent InformTheVoteNJ meet n greet at Glasstown Brewery, which provided genuine face-to-face accessibility. That is a 
+      meaningful positive in a cycle where many candidates remain largely invisible. However, Branin (along with Sherman Taylor) has also declined to participate in the only recorded candidate 
+      forum scheduled this season. While it is understandable given the late organization, the absence means voters still lack a comprehensive record of his agenda and issue positions.
+      <br><br>
+      The broader dilemma here is potentially structural: with few truly public-facing events in Millville’s election season, accountability gaps persist. Should candidates like Branin themselves organize 
+      multiple neutral forums? Should citizens or county institutions step in? In practice, Branin’s current visibility remains limited and shaped more by outside invitations than proactive 
+      campaign transparency.
+      <br><br>
+      Rating: Developing (with tentative progress). One possible path to raise this rating, Branin would need to consolidate his campaign message into a publicly accessible platform (website or detailed issue 
+      statements) and appear in at least one long-form recorded setting.
       <br><br>
       Click the red x at the top of this box and then scroll down for more in-depth information and sources.
     </p>
