--- a/child_pages/cc-elections/Candidates/taylor_sherman.html
+++ b/child_pages/cc-elections/Candidates/taylor_sherman.html
@@ -170,19 +170,22 @@
     <h4 class="quick-sum">Rating Explanation</h4>
     <h6 class="page-title">Sherman R. Taylor</h6>
     <p>
-      Initial transparency/accessibility view: <em>Developing</em>. Taylor has posted a substantive introductory statement outlining his background and top 
-      priorities and has an active Facebook campaign page (see below). At this stage, we have not yet logged a dedicated campaign website, long-form 
-      interviews, or a truly public facing campaign event. What that means is that there was an event with Taylor and two other candidates that was 
-      technically a fundraiser, which limits voters and the press from hearing campaign messaging without directly supporting it. It also raises the question 
-      of whether these 3 candidates are campaigning together without publicly saying so. This also presents the challenge citizen journalists who cover elections 
-      face during the throws of campaign season: even if there was a possibility of hanging around the fundraiser for interview opportunities before or after the 
-      event, it was one of at least 3 events that evening... so, I chose to go where I believed I would have a better chance of getting substantive info, and I would 
-      guess I made the right choice.
+      Taylor began his campaign with a substantive introductory statement that outlined his background and top priorities, alongside an active Facebook page. Those early steps provided a slightly 
+      stronger baseline of information than many first-time candidates. However, he has not yet produced a dedicated campaign website, long-form interviews, or a clearly public-facing event 
+      organized by his campaign. His appearance at an earlier fundraiser alongside two other candidates raised the same concerns about voter accessibility and coordination—such events limit 
+      press coverage and exclude voters unwilling to contribute financially.
       <br><br>
-      What would move this rating up: a central campaign site with organized agenda/issue pages; coordinated communication with the press; long-form 
-      interviews (radio/podcast/video); a truly public and advertised campaign event; and timely replies to voter/media inquiries. As those pieces appear, 
-      we’ll update the rating to reflect real-world accessibility for voters. The main benefit for voters with this candidate and many others is to engage in the action plans 
-      that describe how his campaign ideas will actually materialize if they get elected.
+      Since then, Taylor (like Newell Branin) did take a positive step by attending the InformTheVoteNJ meet n greet at Glasstown Brewery. That appearance allowed for genuine accessibility and 
+      visibility in front of voters, filling at least one gap in this campaign season’s sparse public schedule. At the same time, he has declined participation in the upcoming candidate forum at 
+      the Millville Public Library, which will be the only forum this cycle to be recorded and shared broadly. While the last-minute nature of the forum makes that decision understandable, the 
+      end result is that voters still lack a durable, accessible record of his agenda and issue positions.
+      <br><br>
+      This highlights the larger structural problem of election season disorganization: when neither candidates nor civic institutions establish a consistent framework for fair, public-facing events, 
+      transparency becomes piecemeal and reliant on outside invitations. In that environment, voters are left guessing how much responsibility for the information gap lies with individual 
+      campaigns versus the system as a whole.
+      <br><br>
+      To move upward, Taylor would need to centralize his platform in a campaign site with organized issue sections and participate in at least one 
+      long-form interview. The real benefit for voters will come not just from broad priorities, but from the concrete action plans that show how his campaign ideas would materialize if elected.
       <br><br>
       Click the red x at the top of this box and then scroll down for more in-depth information and sources.
     </p>
