--- a/child_pages/cc-elections/Candidates/green.html
+++ b/child_pages/cc-elections/Candidates/green.html
@@ -394,13 +394,20 @@
             <summary style="color: blue;">
                 <strong>Explanation</strong>
             </summary>
-            Rachel Green has taken notable steps to inform voters by launching a full campaign website and participating in an interview with JT Burks. This puts her effort above the current 
-            status quo in Cumberland County, where many candidates still rely on scattered posts or press coverage rather than centralizing their information.
-            <br>
-            <br>
-            That said, some of her plans are light on details about how they would be implemented, and there has not yet been a clearly advertised, public-facing meet-and-greet event. With mail-in 
-            ballots already distributed, the window to reach voters directly is narrowing. If Green were to host more public events and take part in a more pressing, detail-oriented interview 
-            format, she would be well on her way to a top-tier transparency rating.
+            Rachel Green has taken notable steps to inform voters by launching a full campaign website and participating in an interview with JT Burks. This already placed her above the status 
+            quo in Cumberland County, where many candidates continue to rely on scattered social media posts or sporadic press mentions.
+            <br><br>
+            Since that baseline, Green has also attended the recent InformTheVoteNJ meet-and-greet, a positive sign of willingness to show up in public and interact with voters and press directly. 
+            She is also a tentative “maybe” for the upcoming Millville Public Library forum. If she participates in that kind of recorded, structured event, it would mark a clear advance in 
+            transparency, since voters would gain access to unfiltered, on-the-record messaging.
+            <br><br>
+            At the same time, assessing her overall accessibility remains somewhat murky. She is present and available in certain settings, but has not yet committed to additional long-form 
+            interviews or hosted her own clearly advertised public events. This creates a “fog” where voters can see she is around and reachable, but it is difficult to distinguish her personal 
+            engagement from broader city/county election coordination.
+            <br><br>
+            Given these factors, Green currently sits at an “Above Average (with potential to trend upward)” transparency rating. Her rating would theoretically solidify at a higher tier with 
+            direct participation in 
+            more pressing, detail-oriented interview formats and consistent public-facing events that give voters accessible, accountable insight into her platform.
         </details>
     </div> 
        
