--- a/child_pages/cc-elections/Candidates/green.html
+++ b/child_pages/cc-elections/Candidates/green.html
@@ -385,7 +385,7 @@
     <br>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: A bit Above Average (Trending Up)</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average (Trending Up)</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
