--- a/child_pages/cc-elections/Candidates/mcginty.html
+++ b/child_pages/cc-elections/Candidates/mcginty.html
@@ -692,6 +692,14 @@
                 </div>
             </details>
             </div>
+
+            <div class="video-box-modal can-sec">
+            <h3 class="video-heading">InformTheVoteNJ Man on the Street at Glasstown Brewery — Thomas McGinty</h3>
+
+            
+            <iframe src="https://youtube.com/shorts/4tVlPTmwVlc?si=C2AYWo-APE_gCuX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+
     </details>
 
      <br>
